--- a/keyEvent.css
+++ b/keyEvent.css
@@ -6,10 +6,10 @@
 }
 
 #myList {
-    color: orange;
+    color: pink;
     text-align: center;
     padding-top: 1px;
-    margin-top: 0%;
+    margin-top: 1%;
 }
 
 .listStyle {
